src/scss/components/_button.scss
.button {
  display: inline-block;
  font-family: $font-family-sans-serif;
  text-align: center;
  white-space: nowrap;
  padding: 0.75rem 1.5rem;
  font-size: 1rem;
  border-radius: 0;
  border: 0;
  cursor: pointer;
  background: none;
  transition: 0.2s;
  line-height: 1.5;

  &:hover,
  &:focus {
    text-decoration: none;
  }

  &--disabled,
  &[disabled] {
    opacity: 0.5;
    pointer-events: none;
  }

  svg {
    transition: 0.2s;
  }
}

// Modifiers

.button--block {
  display: block;
  width: 100%;
}

.button--circle {
  border-radius: 10rem;
  padding: 1rem;
  width: 3rem;
  height: 3rem;
  line-height: 1;
}

.button--pill {
  border-radius: 10rem;
}

// Sizes

.button--sm {
  font-size: 14px;
}

.button--xl {
  padding: 40px 30px; // matches .filter__button sizes
}

// Themes

.button--primary {
  background-color: $brand-tertiary;
  color: $brand-primary;

  &:hover,
  &:focus {
    background-color: $brand-primary;
    color: $white;

    svg {
      fill: $white;
    }
  }
}

.button--secondary {
  background-color: $white;
  color: $brand-primary;

  &:hover,
  &:focus {
    background-color: $brand-primary-dark;
    color: $white;

    svg {
      fill: $white;
    }
  }
}

.button--tertiary {
  background-color: $middlebury-blue;
  color: $white;
}

// Elements

// TODO: use ml-2 or 1
.button__icon {
  margin-left: 10px;
}

